--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,11 @@ navbar-links:
     - Awesome Kubernetes: "https://ramitsurana.github.io/awesome-kubernetes/"
     - Kuberenetes by example: "http://kubernetesbyexample.com/"
     - Play with kubernetes: "https://github.com/play-with-docker/play-with-kubernetes.github.io"
+    - Kubernetes Up and Running: "https://github.com/kubernetes-up-and-running/kuard"
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
+    - Emojisense: "https://marketplace.visualstudio.com/items?itemName=bierner.emojisense"
   Author's home: "https://www.linkedin.com/in/outofmemory/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
